<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >
    <TextView android:id="@+id/ota_selected_file"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/info_text"
        android:gravity="center"/>
    <Button android:id="@+id/ota_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ota_select_file"
        android:onClick="onClick"/>
    
    <TextView android:id="@+id/ota_state"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        style="@style/info_text"
        android:text="@string/ota_hint"/>
    <Button android:id="@+id/ota_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ota_enter"
        android:onClick="onClick"/>
    <include layout="@layout/result_buttons"/>

</LinearLayout>
