<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/background_index">

    <LinearLayout 
        android:id="@+id/logtip_fra"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
        >
        <TextView
	        android:id="@+id/text_log_tip"
	        android:layout_width="wrap_content"
	        android:layout_height="20dip" 
	        android:layout_marginLeft="10dp"
	        android:text="@string/log_tip" 
	        android:textColor="#000000"
	        android:textSize="15sp"/>
		
	    <Button
	        android:id="@+id/btn_clear_log"
	        android:layout_width="wrap_content"
	        android:layout_height="33dip"
	        android:paddingTop="3dip"
	        android:paddingBottom="3dip"
	        android:gravity="center"
	        android:layout_marginRight="15dip"
	        android:background="@drawable/button_style"
	        android:text="@string/clear_log"
	        android:textSize="15sp" />
	    
	    <Button
	        android:id="@+id/btn_uploads"
	        android:layout_width="wrap_content"
	        android:layout_height="33dip"
	        android:paddingTop="3dip"
	        android:paddingBottom="3dip"
	        android:gravity="center"
	        android:layout_marginRight="15dip"
	        android:background="@drawable/button_style"
	        android:text="@string/text_btn_upload"
	        android:textSize="15sp" />
	    
    </LinearLayout>
	<ScrollView
	    android:id="@+id/stroll_text"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
		android:layout_marginLeft="10dip"
		android:layout_marginRight="10dip"
		android:layout_marginBottom="5dip"
		android:background="@drawable/background_index"
	    android:layout_weight="1" >"
		    <TextView
		        android:id="@+id/text_log"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		   		android:paddingLeft="3dip" />
    </ScrollView>
    <LinearLayout 
        android:id="@+id/firstBtnLine"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
	    <Button
	        android:id="@+id/btn_start_check"
	        android:layout_width="140dip"
        	android:layout_height="wrap_content"
	        android:layout_marginLeft="10dip"
	        android:layout_marginRight="10dip"
	        android:background="@drawable/button_style"
	        android:text="@string/text_btn_check" />
	

	    <Button
	        android:id="@+id/btn_init"
	        android:layout_width="140dip"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dip"
	        android:layout_marginRight="10dip"
	        android:background="@drawable/button_style"
	        android:text="@string/text_btn_init" />  
	  </LinearLayout>

</LinearLayout>